tests/snapshots/runtime_error_fixtures/division_by_zero_variable.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/division_by_zero_variable.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
[7 of 7] Compiling  division_by_zero_variable
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/division_by_zero_variable.flx
error[E1008]: Division By Zero

Cannot divide by zero.

  examples/runtime_errors/division_by_zero_variable.flx:3:19
  |
3 |     let ignored = 100 / x
  |                   ^^^^^^^

Hint:
  Check divisor is non-zero before division.

Stack trace:
  at main (examples/runtime_errors/division_by_zero_variable.flx:3:19)
  at <main>
